# SQL_MCP_server

./: LICENSE  README.md  database.py  package.json  pyproject.toml
src/sql_mcp/: database.py  main.py  tools.py
